--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 4445",
+    "start": "next start -p 4446",
+    "dev:development": "env-cmd -f .env.development npm run dev",
+    "dev:production": "env-cmd -f .env.production npm run dev",
+    "build:development": "env-cmd -f .env.development npm run build",
+    "build:production": "env-cmd -f .env.production npm run build",
+    "start:development": "env-cmd -f .env.development npm run start",
+    "start:production": "env-cmd -f .env.production npm run start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,5 +26,10 @@
     "recoil-persist": "^4.2.0",
     "sass": "^1.62.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "shelljs": "^0.8.5",
+    "ssh2": "^1.14.0"
   }
 }
