--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 4446",
-    "dev:development": "env-cmd -f .env.development npm run dev",
-    "dev:production": "env-cmd -f .env.production npm run dev",
-    "build:development": "env-cmd -f .env.development npm run build",
-    "build:production": "env-cmd -f .env.production npm run build",
-    "start:development": "env-cmd -f .env.development npm run start",
-    "start:production": "env-cmd -f .env.production npm run start",
+    "dev:dev": "env-cmd -f .env.development npm run dev",
+    "dev:prod": "env-cmd -f .env.production npm run dev",
+    "build:dev": "env-cmd -f .env.development npm run build",
+    "build:prod": "env-cmd -f .env.production npm run build",
+    "start:dev": "env-cmd -f .env.development npm run start",
+    "start:prod": "env-cmd -f .env.production npm run start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,8 +28,11 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "env-cmd": "^10.1.0",
+    "postcss": "^8.4.25",
     "shelljs": "^0.8.5",
-    "ssh2": "^1.14.0"
+    "ssh2": "^1.14.0",
+    "tailwindcss": "^3.3.2"
   }
 }
