feat:add video pin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-rnd": "^10.4.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
