--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.12.2",
+    "dayjs": "^1.11.9",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +36,6 @@
     "env-cmd": "^10.1.0",
     "postcss": "^8.4.25",
     "shelljs": "^0.8.5",
-    "ssh2": "^1.14.0",
-    "tailwindcss": "^3.3.2"
+    "ssh2": "^1.14.0"
   }
 }
