--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "antd": "^5.12.2",
+    "chinese-lunar": "^0.1.4",
+    "date-holidays": "^3.23.3",
     "dayjs": "^1.11.9",
     "next": "13.4.4",
     "react": "18.2.0",
@@ -35,6 +37,7 @@
     "autoprefixer": "^10.4.14",
     "env-cmd": "^10.1.0",
     "postcss": "^8.4.25",
+    "prettier": "^3.1.1",
     "shelljs": "^0.8.5",
     "ssh2": "^1.14.0"
   }
