--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chinese-lunar": "^0.1.4",
     "date-holidays": "^3.23.3",
     "dayjs": "^1.11.9",
+    "jotai": "^2.6.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
