--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "english-video",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 4446",
-    "dev:dev": "env-cmd -f .env.development npm run dev",
-    "dev:prod": "env-cmd -f .env.production npm run dev",
-    "build:dev": "env-cmd -f .env.development npm run build",
-    "build:prod": "env-cmd -f .env.production npm run build",
-    "start:dev": "env-cmd -f .env.development npm run start",
-    "start:prod": "env-cmd -f .env.production npm run start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ant-design/cssinjs": "^1.18.1",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "antd": "^5.12.2",
-    "chinese-lunar": "^0.1.4",
-    "date-holidays": "^3.23.3",
-    "dayjs": "^1.11.9",
-    "jotai": "^2.6.3",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hotkeys-hook": "^4.4.1",
-    "react-rnd": "^10.4.1",
-    "recoil": "^0.7.7",
-    "recoil-persist": "^4.2.0",
-    "sass": "^1.62.1",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "env-cmd": "^10.1.0",
-    "postcss": "^8.4.25",
-    "prettier": "^3.1.1",
-    "shelljs": "^0.8.5",
-    "ssh2": "^1.14.0"
-  }
+    "name": "english-video",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start -p 4446",
+        "dev:dev": "env-cmd -f .env.development npm run dev",
+        "dev:prod": "env-cmd -f .env.production npm run dev",
+        "build:dev": "env-cmd -f .env.development npm run build",
+        "build:prod": "env-cmd -f .env.production npm run build",
+        "start:dev": "env-cmd -f .env.development npm run start",
+        "start:prod": "env-cmd -f .env.production npm run start",
+        "lint": "next lint",
+        "build:docker": "docker build -t hhh ."
+    },
+    "dependencies": {
+        "@ant-design/cssinjs": "^1.18.1",
+        "@types/node": "20.2.5",
+        "@types/react": "18.2.8",
+        "@types/react-dom": "18.2.4",
+        "antd": "^5.12.2",
+        "chinese-lunar": "^0.1.4",
+        "date-holidays": "^3.23.3",
+        "dayjs": "^1.11.9",
+        "jotai": "^2.6.3",
+        "next": "13.4.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hotkeys-hook": "^4.4.1",
+        "react-rnd": "^10.4.1",
+        "recoil": "^0.7.7",
+        "recoil-persist": "^4.2.0",
+        "sass": "^1.62.1",
+        "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.14",
+        "env-cmd": "^10.1.0",
+        "postcss": "^8.4.25",
+        "prettier": "^3.1.1",
+        "shelljs": "^0.8.5",
+        "ssh2": "^1.14.0"
+    }
 }
