--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
         "recoil": "^0.7.7",
         "recoil-persist": "^4.2.0",
         "sass": "^1.62.1",
-        "typescript": "5.1.3"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.14",
+        "typescript": "5.1.3",
         "env-cmd": "^10.1.0",
         "postcss": "^8.4.25",
+        "autoprefixer": "^10.4.14"
+    },
+    "devDependencies": {
         "prettier": "^3.1.1",
         "shelljs": "^0.8.5",
         "ssh2": "^1.14.0"
