--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "english-video",
+    "name": "hhh-website",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -13,7 +14,7 @@
         "start:dev": "env-cmd -f .env.development npm run start",
         "start:prod": "env-cmd -f .env.production npm run start",
         "lint": "next lint",
-        "build:docker": "docker build -t hhh ."
+        "test": "vitest"
     },
     "dependencies": {
         "@ant-design/cssinjs": "^1.18.1",
@@ -21,11 +22,14 @@
         "@types/react": "18.2.8",
         "@types/react-dom": "18.2.4",
         "antd": "^5.12.2",
+        "autoprefixer": "^10.4.14",
         "chinese-lunar": "^0.1.4",
         "date-holidays": "^3.23.3",
         "dayjs": "^1.11.9",
+        "env-cmd": "^10.1.0",
         "jotai": "^2.6.3",
         "next": "13.4.4",
+        "postcss": "^8.4.25",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hotkeys-hook": "^4.4.1",
@@ -33,14 +37,15 @@
         "recoil": "^0.7.7",
         "recoil-persist": "^4.2.0",
         "sass": "^1.62.1",
-        "typescript": "5.1.3",
-        "env-cmd": "^10.1.0",
-        "postcss": "^8.4.25",
-        "autoprefixer": "^10.4.14"
+        "typescript": "5.1.3"
     },
     "devDependencies": {
+        "@testing-library/react": "^15.0.7",
+        "@vitejs/plugin-react": "^4.3.0",
+        "jsdom": "^24.0.0",
         "prettier": "^3.1.1",
         "shelljs": "^0.8.5",
-        "ssh2": "^1.14.0"
+        "ssh2": "^1.14.0",
+        "vitest": "^1.6.0"
     }
 }
