--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     },
     "dependencies": {
         "@ant-design/cssinjs": "^1.18.1",
+        "@tanstack/react-query": "^5.38.0",
         "@types/node": "20.2.5",
         "@types/react": "18.2.8",
         "@types/react-dom": "18.2.4",
         "antd": "^5.12.2",
         "autoprefixer": "^10.4.14",
+        "axios": "^1.7.2",
         "chinese-lunar": "^0.1.4",
         "date-holidays": "^3.23.3",
         "dayjs": "^1.11.9",
@@ -42,7 +44,7 @@
         "@testing-library/react": "^15.0.7",
         "@vitejs/plugin-react": "^4.3.0",
         "jsdom": "^24.0.0",
-        "prettier": "^3.1.1",
+        "prettier": "^3.2.5",
         "shelljs": "^0.8.5",
         "ssh2": "^1.14.0",
         "vitest": "^1.6.0"
