--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dev:prod": "env-cmd -f .env.production npm run dev",
         "build:dev": "env-cmd -f .env.development npm run build",
         "build:prod": "env-cmd -f .env.production npm run build",
+        "build:docker": "sh ./docker-build-local.sh",
         "start:dev": "env-cmd -f .env.development npm run start",
         "start:prod": "env-cmd -f .env.production npm run start",
         "lint": "next lint",
@@ -34,6 +35,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hotkeys-hook": "^4.4.1",
+        "react-pdf": "^8.0.2",
         "react-rnd": "^10.4.1",
         "recoil": "^0.7.7",
         "recoil-persist": "^4.2.0",
