--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-hotkeys-hook": "^4.4.1",
         "react-pdf": "^8.0.2",
         "react-rnd": "^10.4.1",
+        "react-virtuoso": "^4.7.11",
         "recoil": "^0.7.7",
         "recoil-persist": "^4.2.0",
         "sass": "^1.62.1",
