--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start:prod": "env-cmd -f .env.production npm run start",
         "lint": "next lint",
         "test": "vitest",
+        "coverage": "vitest run --coverage",
         "build:docker": "sh ./docker-build-local.sh",
         "deploy": "node deploy",
         "release": "sh ./docker-build-local.sh && node deploy"
@@ -47,9 +48,12 @@
         "typescript": "5.1.3"
     },
     "devDependencies": {
-        "@testing-library/react": "^15.0.7",
-        "@vitejs/plugin-react": "^4.3.0",
-        "jsdom": "^24.0.0",
+        "@testing-library/dom": "^10.1.0",
+        "@testing-library/react": "^16.0.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitest/coverage-v8": "^1.6.0",
+        "@vitest/ui": "^1.6.0",
+        "jsdom": "^24.1.0",
         "prettier": "^3.2.5",
         "shelljs": "^0.8.5",
         "ssh2": "^1.14.0",
