--- a/package.json
+++ b/package.json
@@ -1,62 +1,70 @@
 {
-    "name": "hhh-website",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start -p 4446",
-        "dev:dev": "env-cmd -f .env.development npm run dev",
-        "dev:prod": "env-cmd -f .env.production npm run dev",
-        "build:dev": "env-cmd -f .env.development npm run build",
-        "build:prod": "env-cmd -f .env.production npm run build",
-        "start:dev": "env-cmd -f .env.development npm run start",
-        "start:prod": "env-cmd -f .env.production npm run start",
-        "lint": "next lint",
-        "test": "vitest",
-        "coverage": "vitest run --coverage",
-        "build:docker": "sh ./docker-build-local.sh",
-        "deploy": "node deploy",
-        "release": "sh ./docker-build-local.sh && node deploy"
-    },
-    "dependencies": {
-        "@ant-design/cssinjs": "^1.18.1",
-        "@ant-design/icons": "^5.3.7",
-        "@tanstack/react-query": "^5.38.0",
-        "@types/node": "20.2.5",
-        "@types/react": "18.2.8",
-        "@types/react-dom": "18.2.4",
-        "antd": "^5.12.2",
-        "autoprefixer": "^10.4.14",
-        "axios": "^1.7.2",
-        "chinese-lunar": "^0.1.4",
-        "date-holidays": "^3.23.3",
-        "dayjs": "^1.11.9",
-        "env-cmd": "^10.1.0",
-        "jotai": "^2.6.3",
-        "next": "13.4.4",
-        "postcss": "^8.4.25",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-hotkeys-hook": "^4.4.1",
-        "react-pdf": "^8.0.2",
-        "react-rnd": "^10.4.1",
-        "react-virtuoso": "^4.7.11",
-        "recoil": "^0.7.7",
-        "recoil-persist": "^4.2.0",
-        "sass": "^1.62.1",
-        "typescript": "5.1.3"
-    },
-    "devDependencies": {
-        "@testing-library/dom": "^10.1.0",
-        "@testing-library/react": "^16.0.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "@vitest/coverage-v8": "^1.6.0",
-        "@vitest/ui": "^1.6.0",
-        "jsdom": "^24.1.0",
-        "prettier": "^3.2.5",
-        "shelljs": "^0.8.5",
-        "ssh2": "^1.14.0",
-        "vitest": "^1.6.0"
+  "name": "hhh-website",
+  "version": "0.1.0",
+  "private": true,
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p 4446",
+    "dev:dev": "env-cmd -f .env.development npm run dev",
+    "dev:prod": "env-cmd -f .env.production npm run dev",
+    "build:dev": "env-cmd -f .env.development npm run build",
+    "build:prod": "env-cmd -f .env.production npm run build",
+    "start:dev": "env-cmd -f .env.development npm run start",
+    "start:prod": "env-cmd -f .env.production npm run start",
+    "lint": "next lint",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "build:docker": "sh ./docker-build-local.sh",
+    "deploy": "node deploy",
+    "release": "sh ./docker-build-local.sh && node deploy",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@ant-design/cssinjs": "^1.18.1",
+    "@ant-design/icons": "^5.3.7",
+    "@tanstack/react-query": "^5.38.0",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.4",
+    "antd": "^5.12.2",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.7.2",
+    "chinese-lunar": "^0.1.4",
+    "commitizen": "^4.3.0",
+    "date-holidays": "^3.23.3",
+    "dayjs": "^1.11.9",
+    "env-cmd": "^10.1.0",
+    "jotai": "^2.6.3",
+    "next": "13.4.4",
+    "postcss": "^8.4.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
+    "react-pdf": "^8.0.2",
+    "react-rnd": "^10.4.1",
+    "react-virtuoso": "^4.7.11",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
+    "sass": "^1.62.1",
+    "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "husky": "^9.1.1",
+    "jsdom": "^24.1.0",
+    "prettier": "^3.2.5",
+    "shelljs": "^0.8.5",
+    "ssh2": "^1.14.0",
+    "vitest": "^1.6.0"
+  }
 }
