feat: add deploy script

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 4446",
-    "dev:dev": "env-cmd -f .env.development npm run dev",
-    "dev:prod": "env-cmd -f .env.production npm run dev",
-    "build:dev": "env-cmd -f .env.development npm run build",
-    "build:prod": "env-cmd -f .env.production npm run build",
-    "start:dev": "env-cmd -f .env.development npm run start",
-    "start:prod": "env-cmd -f .env.production npm run start",
+    "dev:dev": "env-cmd -f .env.development pnpm dev",
+    "dev:prod": "env-cmd -f .env.production pnpm dev",
+    "build:dev": "env-cmd -f .env.development pnpm build",
+    "build:prod": "env-cmd -f .env.production pnpm build",
+    "start:dev": "env-cmd -f .env.development pnpm start",
+    "start:prod": "env-cmd -f .env.production pnpm start",
     "lint": "next lint",
     "test": "vitest",
     "coverage": "vitest run --coverage",
