--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.1",
     "@ant-design/icons": "^5.3.7",
+    "@next/bundle-analyzer": "^14.2.5",
     "@tanstack/react-query": "^5.38.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
