--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/sortablejs": "^1.15.8",
     "antd": "^5.12.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.7.2",
@@ -49,11 +50,14 @@
     "react-hotkeys-hook": "^4.4.1",
     "react-pdf": "^8.0.2",
     "react-rnd": "^10.4.1",
+    "react-sortablejs": "^6.1.4",
     "react-virtuoso": "^4.7.11",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
     "sass": "^1.62.1",
-    "typescript": "5.1.3"
+    "sortablejs": "^1.15.2",
+    "typescript": "5.1.3",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.1.0",
