--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "env-cmd": "^10.1.0",
     "jotai": "^2.6.3",
     "next": "13.4.4",
+    "next-themes": "^0.3.0",
     "postcss": "^8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
