--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/sortablejs": "^1.15.8",
-    "antd": "^5.12.2",
+    "antd": "^5.21.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.7.2",
     "boring-avatars": "^1.11.2",
@@ -46,10 +46,11 @@
     "dayjs": "^1.11.9",
     "env-cmd": "^10.1.0",
     "jotai": "^2.6.3",
-    "next": "13.4.4",
+    "next": "14.2.15",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.25",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-pdf": "^8.0.2",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
