--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.18.1",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@ant-design/static-style-extract": "^1.0.3",
     "@next/bundle-analyzer": "^14.2.5",
     "@tanstack/react-query": "^5.38.0",
     "@types/node": "20.2.5",
@@ -49,7 +49,7 @@
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.25",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^4.4.1",
@@ -71,11 +71,14 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
+    "cross-env": "^7.0.3",
     "husky": "^9.1.1",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
     "shelljs": "^0.8.5",
     "ssh2": "^1.14.0",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.0",
     "vitest": "^1.6.0"
   }
 }
